--- a/course-02/exercises/udacity-c2-frontend/package.json
+++ b/course-02/exercises/udacity-c2-frontend/package.json
@@ -5,8 +5,8 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ionic serve",
+    "build": "ionic build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "^11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.5",
     "@angular/router": "^11.0.5",
-    "@ionic-native/core": "^5.9.0",
-    "@ionic-native/splash-screen": "^5.9.0",
-    "@ionic-native/status-bar": "^5.9.0",
-    "@ionic/angular": "^5.5.2",
+    "@ionic-native/core": "5.31.1",
+    "@ionic-native/splash-screen": "^5.31.1",
+    "@ionic-native/status-bar": "5.31.1",
+    "@ionic/angular": "^5.6.3",
+    "cordova-ios": "6.2.0",
     "core-js": "^3.0.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
@@ -37,12 +38,18 @@
     "@angular/compiler": "^11.0.5",
     "@angular/compiler-cli": "^11.0.5",
     "@angular/language-service": "^11.0.5",
-    "@ionic/angular-toolkit": "^3.0.0",
+    "@ionic/angular-toolkit": "3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^12.11.1",
     "ajv": "^6.12.6",
     "codelyzer": "^6.0.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
@@ -55,5 +62,18 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "ios"
+    ]
+  }
 }
