--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -2,9 +2,9 @@
   "name": "udacity-c2-image-filter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "clean": "rimraf www/ || true",
     "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
     "dev": "ts-node-dev ./src/server.ts"
@@ -20,16 +20,16 @@
   },
   "homepage": "https://github.com/grutt/udacity-c2-image-filter#readme",
   "devDependencies": {
-    "@types/bluebird": "^3.5.27",
-    "@types/express": "^4.17.0",
-    "@types/node": "^11.13.17",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "@types/bluebird": "3.5.33",
+    "@types/express": "4.17.9",
+    "@types/node": "14.14.37",
+    "ts-node-dev": "1.1.6",
+    "tslint": "6.1.3",
+    "typescript": "4.2.3"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "jimp": "^0.16.1",
-    "rimraf": "^3.0.2"
+    "express": "4.17.1",
+    "jimp": "0.16.1",
+    "rimraf": "3.0.2"
   }
 }
